<resources>
    <string name="app_name">Personal Finance</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_title_app">Persofi</string>
    <string name="text_hello_user">Hello, %1$s"</string>
    <string name="text_subtitle_onb">Simple way to manage your savings</string>
    <string name="btn_onb">Get Started</string>
    <string name="text_income">Income</string>
    <string name="text_dummy_balance">Rp 1.000.000</string>
    <string name="text_expense">Expense</string>
    <string name="text_item_transaction_desc">%1$s • %2$s • %3$s</string>
    <string name="text_placeholder_title_transaction">This is name Dummy Transaction</string>
    <string name="text_placeholder_title_category_name">This is name Category</string>
    <string name="text_placeholder_account_name">John Doe Lorem Ipsum</string>
    <string name="text_placeholder_account_type">Type Account</string>
    <string name="text_placeholder_user_name">John Doe</string>
    <string name="text_home_subtitle">Welcome Back</string>
    <string name="text_total_balance">Total Balance</string>
    <string name="text_transactions">Transactions</string>
    <string name="text_no_transaction">There is No Transaction</string>
    <string name="text_btn_add">Add</string>
    <string name="text_no_account">No Accounts Found</string>
    <string name="text_edittext_transaction_name">Transaction Name</string>
    <string name="text_edittext_desc">Description</string>
    <string name="text_edittext_amount">Amount</string>
    <string name="text_date">Date</string>
    <string name="text_time">Time</string>
    <string name="text_select_account">Select Account</string>
    <string name="text_select_category">Select Category</string>
    <string name="text_btn_update">Update</string>
    <string name="text_edittext_account_name">Account Name</string>
    <string name="text_type_cash">Cash</string>
    <string name="text_type_bank">Bank</string>
    <string name="text_type_ewallet">E-Wallet</string>
    <string name="text_greeting_app">Hi, Who Are You?</string>
    <string name="text_btn_done">Done</string>
    <string name="text_edittext_user_name">Enter Your Name</string>
    <string name="text_transfer">Transfer</string>
    <string name="text_select_account_from">Select Account From</string>
    <string name="text_select_account_to">Transfer To</string>
    <string name="text_btn_next">Next</string>
    <string name="text_title_category">Pick Category</string>
    <string name="text_title_account">Pick Account</string>
</resources>