<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="8dp"
    android:paddingTop="16dp"
    tools:context=".presentation.update_account.UpdateAccountActivity">

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroupTransaction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:singleSelection="true"
        tools:layout_editor_absoluteX="9dp">

        <com.google.android.material.chip.Chip
            android:id="@+id/chipCash"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_type_cash"
            app:checkedIconEnabled="false" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipBank"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_type_bank"
            app:checkedIconEnabled="false" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipEWallet"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_type_ewallet"
            app:checkedIconEnabled="false" />

    </com.google.android.material.chip.ChipGroup>

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/ic_delete_24"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/text_edittext_account_name"
        app:layout_constraintTop_toBottomOf="@id/chipGroupTransaction">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/text_edittext_amount"
        app:layout_constraintTop_toBottomOf="@id/inputLayoutName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btnAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/text_btn_update"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
