<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.add_transaction.income_expense.IncomeExpenseFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/text_edittext_transaction_name"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/text_edittext_desc"
        app:layout_constraintTop_toBottomOf="@id/inputLayoutName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/text_edittext_amount"
        app:layout_constraintTop_toBottomOf="@id/inputLayoutDesc">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/transparent"
        android:text="@string/text_date"
        android:textColor="@color/material_on_surface_emphasis_high_type"
        app:icon="@drawable/ic_calendar_month_24"
        app:iconTint="@color/md_theme_onSurface"
        app:layout_constraintEnd_toStartOf="@id/btnTime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputLayoutAmount"
        tools:ignore="VisualLintButtonSize" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnTime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:text="@string/text_time"
        android:textColor="@color/material_on_surface_emphasis_high_type"
        app:icon="@drawable/ic_access_time_24"
        app:iconTint="@color/md_theme_onSurface"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnDate"
        app:layout_constraintTop_toBottomOf="@id/inputLayoutAmount"
        tools:ignore="VisualLintButtonSize" />

    <TextView
        android:id="@+id/tvSelectAcc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/text_select_account"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnDate" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvAccounts"
        android:layout_width="wrap_content"
        android:layout_height="108dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSelectAcc"
        tools:listitem="@layout/item_card_account_add" />

    <TextView
        android:id="@+id/tvSelectCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/text_select_category"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rvAccounts" />

    <ScrollView

        android:id="@+id/scrollLayoutChipGroup"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSelectCategory">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroupCategory"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:chipSpacingVertical="-4dp"
            app:singleLine="false"
            app:singleSelection="true">

            <!--                    <com.google.android.material.chip.Chip-->
            <!--                        android:id="@+id/chipDining"-->
            <!--                        style="@style/Widget.Material3.Chip.Filter"-->
            <!--                        android:layout_width="wrap_content"-->
            <!--                        android:layout_height="wrap_content"-->
            <!--                        android:text="Dining"-->
            <!--                        app:checkedIconEnabled="false"-->
            <!--                        app:chipIcon="@drawable/ic_add_24"-->
            <!--                        app:chipIconVisible="true" />-->

            <!--                    <com.google.android.material.chip.Chip-->
            <!--                        android:id="@+id/chipEducation"-->
            <!--                        style="@style/Widget.Material3.Chip.Filter"-->
            <!--                        android:layout_width="wrap_content"-->
            <!--                        android:layout_height="wrap_content"-->
            <!--                        android:text="Education"-->
            <!--                        app:checkedIconEnabled="false"-->
            <!--                        app:chipIcon="@drawable/ic_add_24"-->
            <!--                        app:chipIconVisible="true" />-->

            <!--                    <com.google.android.material.chip.Chip-->
            <!--                        android:id="@+id/chipSubscription"-->
            <!--                        style="@style/Widget.Material3.Chip.Filter"-->
            <!--                        android:layout_width="wrap_content"-->
            <!--                        android:layout_height="wrap_content"-->
            <!--                        android:text="Subscription"-->
            <!--                        app:checkedIconEnabled="false"-->
            <!--                        app:chipIcon="@drawable/ic_add_24"-->
            <!--                        app:chipIconVisible="true" />-->

            <!--                    <com.google.android.material.chip.Chip-->
            <!--                        android:id="@+id/chipTransportation"-->
            <!--                        style="@style/Widget.Material3.Chip.Filter"-->
            <!--                        android:layout_width="wrap_content"-->
            <!--                        android:layout_height="wrap_content"-->
            <!--                        android:text="Transportation"-->
            <!--                        app:checkedIconEnabled="false"-->
            <!--                        app:chipIcon="@drawable/ic_add_24"-->
            <!--                        app:chipIconVisible="true" />-->

            <!--                    <com.google.android.material.chip.Chip-->
            <!--                        android:id="@+id/chipEntertainment"-->
            <!--                        style="@style/Widget.Material3.Chip.Filter"-->
            <!--                        android:layout_width="wrap_content"-->
            <!--                        android:layout_height="wrap_content"-->
            <!--                        android:text="Entertainment"-->
            <!--                        app:checkedIconEnabled="false"-->
            <!--                        app:chipIcon="@drawable/ic_add_24"-->
            <!--                        app:chipIconVisible="true" />-->

            <!--                    <com.google.android.material.chip.Chip-->
            <!--                        android:id="@+id/chipGift"-->
            <!--                        style="@style/Widget.Material3.Chip.Filter"-->
            <!--                        android:layout_width="wrap_content"-->
            <!--                        android:layout_height="wrap_content"-->
            <!--                        android:text="Gift"-->
            <!--                        app:checkedIconEnabled="false"-->
            <!--                        app:chipIcon="@drawable/ic_add_24"-->
            <!--                        app:chipIconVisible="true" />-->

        </com.google.android.material.chip.ChipGroup>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>